--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   </script>
   <script>
   const firebaseConfig = {
-  <script src="https://maps.googleapis.com/maps/api/js?key="AIzaSyBQKm4kX-MQCOhik8MMxaqs6piiyND0TTk"
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR-KEY-HERE"></script> -->
   authDomain: "marichibi-site.firebaseapp.com",
   projectId: "marichibi-site",
   storageBucket: "marichibi-site.firebasestorage.app",
