Test: update to index.html

--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
 
   <footer>
     © 2025 Marichibi. All rights reserved.
+    <!-- TEST: added by Echo -->
+
   </footer>
 
   <script src="main.js"></script>
