Add multiple new images for website

--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
 
   <section class="hero">
     <div class="hero-content">
-      <h1>✨ Born to be cute.<br>Raised to be legendary. 🎺</h1>
-      <p>Meet Marichibi – the axolotl with corazón, style, and a golden trumpet.</p>
-      <img src="./images/marichibi-hero.png" alt="Marichibi hero" />
+    <h1>✨Born to be cute. <br> Raised to be legendary. 🎺</h1>
+      <p>Meet Marichibi  the axolotl with corazón, style, and a golden trumpet.</p>
+      <img src="./images/donut-hero2.png
+      " alt="Marichibi hero" />
     </div>
   </section>
 
@@ -142,7 +143,7 @@
   <section id="game">
     <h2>🎮 Play the Game</h2>
     <p>An endless runner set in Marichibi’s colorful barrio is on the way!</p>
-    <img src="game-preview.png" alt="Game Preview" class="game-preview-img" />
+    <img src="./images/gamecover.png" alt="Game Preview" class="game-preview-img" />
     <p><em>Coming soon...</em></p>
   </section>
 
