Add images and fix merge

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="hero-content">
       <h1>✨ Born to be cute.<br>Raised to be legendary. 🎺</h1>
       <p>Meet Marichibi – the axolotl with corazón, style, and a golden trumpet.</p>
-      <img src="./images/marichibi-hero.png" alt="Marichibi hero" />
+      <img src="./images/donut-hero2.png" alt="Marichibi hero" />
     </div>
   </section>
 
