Full site update: new favicon, HTML edits, new images

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
   <div class="sparkles"></div>
 
   <img src="./images/marichibi-logo.png" alt="Marichibi Logo" class="logo" />
-
+<div class="text-box">
   <h1>¡Bienvenidos a Marichibi!</h1>
   <p>
     A magical world where chibi charm meets Chicano corazón.<br />
     Join Marichibi and her amigos for stories, songs, and adventures.
   </p>
-
+</div>
   <div class="cta-buttons">
     <a href="#characters" class="btn">Meet the Characters</a>
     <a href="#book" class="btn">Read the Book</a>
