Updated HTML content

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Marichibi</title>
 
   <!-- Icons -->
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+  <link rel="icon" type="image/png"  href="images/favicon.png" />
+
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
   <!-- Manifest & Theme -->
@@ -44,7 +44,7 @@
 <body>
   <header class="navbar">
     <div class="logo-title">
-      <img src="./images/marichibi-logo.png" alt="Marichibi Logo" />
+      <img src="./images/Marichibi_Coloring_Page.png" alt="Marichibi Logo" />
       <span class="site-title">Marichibi</span>
     </div>
     <nav>
@@ -69,7 +69,7 @@
 
   <div class="sparkles"></div>
 
-  <img src="./images/marichibi-logo.png" alt="Marichibi Logo" class="logo" />
+  <img src="./images/Marichibi_Coloring_Page.png" alt="Marichibi Logo" class="logo" />
 <div class="text-box">
   <h1>¡Bienvenidos a Marichibi!</h1>
   <p>
