Describe what you changed

--- a/index.html
+++ b/index.html
@@ -70,17 +70,11 @@
   <div class="sparkles"></div>
 
   <img src="./images/Marichibi_Coloring_Page.png" alt="Marichibi Logo" class="logo" />
-<div class="text-box">
-  <h1>¡Bienvenidos a Marichibi!</h1>
-  <p>
-    A magical world where chibi charm meets Chicano corazón.<br />
-    Join Marichibi and her amigos for stories, songs, and adventures.
-  </p>
-</div>
+  
   <div class="cta-buttons">
     <a href="#characters" class="btn">Meet the Characters</a>
     <a href="#book" class="btn">Read the Book</a>
-    <a href="https://youtube.com/shorts/d5OSfDIz7nU" class="btn" target="_blank" rel="noopener">Watch Shorts</a>
+    <a href="https://youtube.com/shorts/SNQQ7Gy_RO0" class="btn" target="_blank" rel="noopener">Watch Shorts</a>
     <a href="#game" class="btn">Play the Game</a>
     <a href="Marichibi_Coloring_Page.pdf" class="btn" target="_blank" download>🎨 Download Coloring Page</a>
   </div>
@@ -127,16 +121,18 @@
     </p>
     <a href="storybook.html" class="btn">Read Now</a>
   </section>
-
-  <a href="https://youtube.com/shorts/d5OSfDIz7nU" target="_blank" rel="noopener" class="video-thumbnail">
+<section id="shorts">
+    <h2>🎥 Watch Marichibi Shorts</h2>
+    <p>Catch the latest adventures of Marichibi and friends in our YouTube Shorts series!</p>
+  <a href="https://youtube.com/shorts/q_WvDsuPUqE" target="_blank" rel="noopener" class="video-thumbnail">
     <img src="./images/marichibi-short-thumb.png" alt="Watch Marichibi Short on YouTube" />
   </a>
 
   <section id="game">
-    <h2>🎮 Play the Game</h2>
-    <p>An endless runner set in Marichibi’s colorful barrio is on the way!</p>
+    <h2>🎮 Marichibi’s Fiesta Run!</h2>
+    <p>An endless runner/jumper set in Marichibi’s colorful barrio!</p>
     <img src="./images/gamecover.png" alt="Game Preview" class="game-preview-img" />
-    <p><em>Coming soon...</em></p>
+  
   </section>
 
   <section id="coloring">
