Add Play Game button

--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
     <a href="#characters" class="btn">Meet the Characters</a>
     <a href="#book" class="btn">Read the Book</a>
     <a href="https://youtube.com/shorts/SNQQ7Gy_RO0" class="btn" target="_blank" rel="noopener">Watch Shorts</a>
-    <a href="#game" class="btn">Play the Game</a>
+    <a href="/game/" target="_blank" rel="noopener" class="btn">
+  🎮 Play Marichibi’s Fiesta Run
+</a>
+
     <a href="Marichibi_Coloring_Page.pdf" class="btn" target="_blank" download>🎨 Download Coloring Page</a>
   </div>
 
