--- a/game/index.html
+++ b/game/index.html
@@ -2,29 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <title>Marichibi’s Fiesta Run</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="game-root"></div>
-  <div class="hud">Score: <span id="score">0</span></div>
-  <div class="btnbar">
-    <button class="btn" id="btn-pause">Pause</button>
-    <button class="btn alt" id="btn-restart">Restart</button>
-    
-    <button class="btn" id="btn-full">Fullscreen</button>
-    <button class="btn" id="btn-mute">Mute</button>
-    <label for="vol" class="label">Volume</label>
-    <input id="vol" type="range" min="0" max="1" step="0.01" value="0.4" title="Adjust game volume">
+  <div id="game-wrap">
+    <div id="game-root"></div>
+
+    <div class="hud">Score: <span id="score">0</span></div>
+
+    <div class="btnbar">
+      <button class="btn" id="btn-pause">Pause</button>
+      <button class="btn alt" id="btn-restart">Restart</button>
+      <button class="btn" id="btn-full">Fullscreen</button>
+      <button class="btn" id="btn-mute">Mute</button>
+      <label for="vol" class="label">Volume</label>
+      <input id="vol" type="range" min="0" max="1" step="0.01" value="0.4" title="Adjust game volume">
+    </div>
+
+    <div class="tests">Pass: <span id="test-pass">0</span>/<span id="test-total">0</span></div>
+
+    <div class="hint" id="jump-hint"> ↑ = Jump • Collect donuts, avoid cacti!</div>
+
+    <div class="mobile-ctrls" id="mobileCtrls" hidden>
+      <button class="jump-btn" id="jumpBtn" aria-label="Jump">Jump</button>
+    </div>
   </div>
-  <div class="tests">Pass: <span id="test-pass">0</span>/<span id="test-total">0</span></div>
-  <div class="hint"> ↑ = Jump • Collect donuts, avoid cacti!</div>
 
   <script defer src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
   <script defer src="config.js"></script>
   <script defer src="game.js"></script>
 </body>
+
 </html>
 
 
