--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
   <section id="game">
     <h2>🎮 Marichibi’s Fiesta Run!</h2>
     <p>An endless runner/jumper set in Marichibi’s colorful barrio!</p>
-    <img src="./images/gamecover.png" alt="Game Preview" class="game-preview-img" />
-  
+    <a href="/game/" target="_blank" rel="noopener" class="btn">Play Now</a>
+    <img src="./images/gamecover.png" alt="Game Preview" class="game-preview-img">
   </section>
 
   <section id="coloring">
